--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Terraservers Home</title>
 </head>
 <body>
     <h1>Terraservers</h1>
-    <a href="google.com">Google</a>
+    <a href="anotherPage.html">Google</a>
 </body>
 </html>
