--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Terraservers</h1>
-    <a href="anotherPage.html">Google</a>
+    <a href="anotherPage.html">Another Page</a>
 </body>
 </html>
